[metadata]
name = a10-octavia
summary = OpenStack A10 Octavia Driver
description-file =
    README.md
author = A10 Networks
author-email = mdurrant@a10networks.com
home-page = https://github.com/a10networks/a10-octavia
classifier =
    Development Status :: 1 - Planning
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    a10_octavia
data_files =
    share/a10-octavia =
        CHANGELOG
        LICENSE
        README.md

[wheel]
universal = 1

[entry_points]
console_scripts =
    octavia-worker = a10_octavia.cmd.octavia_worker:main
octavia.api.drivers =
    a10 = a10_octavia.api.drivers.driver:A10ProviderDriver
#octavia.amphora.drivers =
    #amphora_a10_driver = a10_octavia.amphorae.drivers.a10_driver.driver:A10AmphoraLoadBalancerDriver
octavia.plugins =
    a10_hot_plug_plugin = a10_octavia.controller.worker.controller_worker:A10ControllerWorker
