[metadata]
name = a10-octavia
summary = A10 Octavia Provider Driver
author = A10 Networks
author-email = opensource@a10networks.com
home-page = https://github.com/a10networks/a10-octavia
long_description_content_type = text/markdown
description-file =
    README.md
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    a10_octavia
data_files =
    share/a10-octavia =
        CHANGELOG
        LICENSE
        README.md
package_data =
	a10_octavia.db.migrations = alembic.ini
scripts =
        a10_octavia/install/a10-octavia-worker
        a10_octavia/install/a10-house-keeper
        a10_octavia/install/a10-health-manager
        a10_octavia/install/install-a10-octavia

[wheel]
universal = 1

[entry_points]
octavia.api.drivers =
    a10 = a10_octavia.api.drivers.driver:A10ProviderDriver
a10.plugins =
    a10_octavia_plugin = a10_octavia.controller.worker.controller_worker:A10ControllerWorker
octavia.driver_agent.provider_agents = 
    a10_provider_agent = a10_octavia.cmd.a10_octavia_worker:main
console_scripts =
    a10-octavia-db-manage = a10_octavia.db.migration.cli:main
octavia.network.drivers =
    a10_octavia_neutron_driver = a10_octavia.network.drivers.neutron.a10_octavia_neutron:A10OctaviaNeutronDriver
